; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_path-util.c_path_make_absolute.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_path-util.c_path_make_absolute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @path_make_absolute(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @assert(i8* %6)
  %8 = load i8*, i8** %4, align 8
  %9 = call i64 @path_is_absolute(i8* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %2
  %12 = load i8*, i8** %5, align 8
  %13 = call i64 @isempty(i8* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %11, %2
  %16 = load i8*, i8** %4, align 8
  %17 = call i8* @strdup(i8* %16)
  store i8* %17, i8** %3, align 8
  br label %22

18:                                               ; preds = %11
  %19 = load i8*, i8** %5, align 8
  %20 = load i8*, i8** %4, align 8
  %21 = call i8* @path_join(i8* %19, i8* %20)
  store i8* %21, i8** %3, align 8
  br label %22

22:                                               ; preds = %18, %15
  %23 = load i8*, i8** %3, align 8
  ret i8* %23
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i64 @path_is_absolute(i8*) #1

declare dso_local i64 @isempty(i8*) #1

declare dso_local i8* @strdup(i8*) #1

declare dso_local i8* @path_join(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
